# jniw

./: CMakeLists.txt  README.md
include/jniw/: jniw.h
src/: jniw.c
